--- a/ios/Podfile
+++ b/ios/Podfile
@@ -20,19 +20,19 @@ prepare_react_native_project!
 flipper_config = ENV['NO_FLIPPER'] == "1" ? FlipperConfiguration.disabled : FlipperConfiguration.enabled
 
 linkage = ENV['USE_FRAMEWORKS']
-if linkage != nil
+
   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
-  use_frameworks! :linkage => linkage.to_sym
-end
+  use_frameworks! :linkage => :static
+
 
 target 'milestest' do
   config = use_native_modules!
 
   # Flags change depending on the env values.
   flags = get_default_flags()
-  pod 'Firebase', :modular_headers => true
-  pod 'FirebaseCoreInternal', :modular_headers => true
-  pod 'GoogleUtilities', :modular_headers => true
+  pod 'Firebase', :modular_headers => false
+  pod 'FirebaseCoreInternal', :modular_headers => false
+  pod 'GoogleUtilities', :modular_headers => false
 
   use_react_native!(
     :path => config[:reactNativePath],
@@ -43,7 +43,7 @@ target 'milestest' do
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
-    :flipper_configuration => flipper_config,
+    #:flipper_configuration => flipper_config,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
@@ -53,7 +53,8 @@ target 'milestest' do
     # Pods for testing
   end
 
-  use_frameworks! :linkage => :static
+
+  #use_modular_headers!()
   post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
