--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@react-native-firebase/auth": "^18.4.0",
     "@react-native-firebase/firestore": "^18.4.0",
     "@react-native-firebase/storage": "^18.4.0",
+    "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-gesture-handler": "^2.13.0",
+    "react-native-reanimated": "^3.5.2",
+    "react-native-safe-area-context": "^4.7.2",
+    "react-native-screens": "^3.25.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
